Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/OCS_Config_Settings_CSH__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used to control and enabling and disabling of automation in the system.</description>
    <label>OCS Config Settings CSH</label>
</CustomObject>