Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/fields/Emails_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Emails_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to control whether or not flows triggered by this user will send email notifications. Note this does not apply to Approval Process emails or other notifications sent outside of Flow.</inlineHelpText>
    <label>Emails Disabled</label>
    <type>Checkbox</type>
</CustomField>