Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/fields/Flows_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Flows_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to control whether or not flows will run within a transaction</description>
    <inlineHelpText>Check this to disable all flows in the system</inlineHelpText>
    <label>Flows Disabled</label>
    <type>Checkbox</type>
</CustomField>