Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/fields/Migration_Flows_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Migration_Flows_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Flows Enabled</label>
    <type>Checkbox</type>
</CustomField>