Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/fields/Triggers_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to control whether or not triggers will be executed</description>
    <inlineHelpText>Check this box to disable triggers across the system</inlineHelpText>
    <label>Triggers Disabled</label>
    <type>Checkbox</type>
</CustomField>