Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/fields/Validation_Rules_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to control whether validation rules will run in a transaction</description>
    <inlineHelpText>Check this box to disable all validation rules in the system</inlineHelpText>
    <label>Validation Rules Disabled</label>
    <type>Checkbox</type>
</CustomField>