Agentforce/force-app/main/default/objects/OCS_Config_Settings_CSH__c/listViews/All_Config_Settings.listView-meta.xml
<ListView>
    <fullName>All_Config_Settings</fullName>
    <columns>NAME</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Flows_Disabled__c</columns>
    <columns>Migration_Flows_Enabled__c</columns>
    <columns>Triggers_Disabled__c</columns>
    <columns>Validation_Rules_Disabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Config Settings</label>
</ListView>